added remaining important variants

--- a/covidproject/src/index.css
+++ b/covidproject/src/index.css
@@ -43,12 +43,40 @@ body {
   font-size: 36px;
 }
 
+#gamma{
+  background-color: transparent; 
+  position: absolute;
+  z-index: 3;
+  left: 33%;
+  top: 84%;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 36px;
+}
+
 #beta{
   background-color: transparent; 
   position: absolute;
   z-index: 3;
-  left: 53%;
+  left: 62%;
   top: 24%;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 36px;
+}
+
+#delta{
+  background-color: transparent; 
+  position: absolute;
+  z-index: 3;
+  left: 62%;
+  top: 84%;
   border: none;
   padding: 15px 32px;
   text-align: center;
