--- a/covidproject/src/index.css
+++ b/covidproject/src/index.css
@@ -61,7 +61,7 @@ body {
   background-color: transparent; 
   position: absolute;
   z-index: 3;
-  left: 62%;
+  left: 63%;
   top: 24%;
   border: none;
   padding: 15px 32px;
@@ -91,7 +91,7 @@ body {
 
 .box {
   position: relative;
-  width: 70%;
+  width: 35%;
   margin: 0 auto;
   height: auto;
   max-height: 70vh;
@@ -107,8 +107,8 @@ body {
   content: 'x';
   cursor: pointer;
   position: fixed;
-  right: calc(15% - 30px);
-  top: calc(100vh - 85vh - 33px);
+  right: calc(5% + 395px);
+  top: calc(100vh - 85vh - 27px);
   background: #ededed;
   width: 25px;
   height: 25px;
