--- a/covidproject/src/index.css
+++ b/covidproject/src/index.css
@@ -43,7 +43,7 @@ body {
   position: absolute;
   z-index: 3;
   left: 28%;
-  top: 55%;
+  top: 51.5%;
   border: none;
   padding: 15px 32px;
   text-align: center;
@@ -85,7 +85,7 @@ body {
   position: absolute;
   z-index: 3;
   left: 67%;
-  top: 55%;
+  top: 52.5%;
   border: none;
   padding: 15px 32px;
   text-align: center;
@@ -112,6 +112,10 @@ body {
   color: rgb(241, 241, 57);
 }
 
+.concern:hover{
+  color:rgb(255, 209, 6);
+}
+
 .box {
   position: relative;
   width: 35%;
@@ -120,7 +124,7 @@ body {
   max-height: 70vh;
   margin-top: calc(100vh - 85vh - 20px);
   background: #fff;
-  border-radius: 4px;
+  border-radius: 10px;
   padding: 20px;
   border: 1px solid #999;
   overflow: auto;
@@ -140,4 +144,8 @@ body {
   text-align: center;
   border: 1px solid #999;
   font-size: 20px;
+}
+
+.close-icon:hover{
+  background: #aea3a3;
 }
